--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
-    "pg": "^8.7.1",
-    "pg-promise": "^10.11.1"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.13.0"
   }
 }
